[package]
name = "qoiv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.11.2"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
